# recruiter-auto

./: .gitignore  README.md  add_new_candidate.py  add_new_note.py  add_new_work_exp.py  adder_orchestrator.py  candidate.db  init_db.py  main.py  pyproject.toml  query_db.py  schema.sql  vector_embeddings.py
chroma_db/: chroma.sqlite3
test_data/transcripts/: andy_bernard_minutes.txt
