[tool.poetry]
name = "recruiter-auto"
version = "0.1.0"
description = ""
authors = ["Masaki <masaki.norton@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
chromadb = "^0.6.3"
langchain = "^0.3.19"
langchain-openai = "^0.3.6"
langchain-community = "^0.3.18"
langchain-chroma = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
